--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome_note">Welcome to Usman\'s Disease Detector</string>
     <string name="settings">Settings</string>
-    <string name="server_url">Server URL</string>
+    <string name="server_url">Hostname</string>
 
     <string name="picture">Picture</string>
     <string name="description_info">Info</string>
     <string name="request_permission">This App needs camera permission.</string>
     <string name="camera_error">This device doesn\'t support Camera2 API.</string>
+    <string name="server_port">Port Number</string>
 
 </resources>
